// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-im0jaj-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-d00jsz-Icon"
              />
            </span>
          </span>
          <span
            className="css-l730ys-Button"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-6yikiy-Button"
        data-testid="button-button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-d00jsz-Icon"
              />
            </span>
          </span>
          <span
            className="css-l730ys-Button"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-eh8b4s-Button"
        data-testid="button-button"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-d00jsz-Icon"
              />
            </span>
          </span>
          <span
            className="css-l730ys-Button"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-im0jaj-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-d00jsz-Icon"
              />
            </span>
          </span>
          <span
            className="css-l730ys-Button"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1mq4gnz-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-1atsk5c-Icon"
              />
            </span>
          </span>
          <span
            className="css-l730ys-Button"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-skiixa-Button"
        data-testid="button-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1xr6sam-Button"
        >
          <span
            className="css-1kner5m-Button"
          >
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-bbphqq-Icon"
              />
            </span>
          </span>
          <span
            className="css-l730ys-Button"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
